<resources>
    <string name="app_name">BSBank</string>
    <string name="bs_bank">BS Bank</string>
    <string name="enjoy_the_service">Enjoy the Service!</string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_address">Email Address</string>
    <string name="account_info">Account Info</string>
    <string name="account_number">Account Number</string>
    <string name="ifs_code">IFS Code</string>
    <string name="current_balance">Current Balance</string>
    <string name="submit">submit</string>
    <string name="user_logo">User logo</string>
    <string name="sender_details">Sender details</string>
    <string name="account_number_tra">Account number</string>
    <string name="receiver_details">Receiver details</string>
</resources>