<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUser">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/first_name"
        android:autofillHints="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="15"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_username"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/last_name"
        android:autofillHints="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="15"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_username"
        android:drawablePadding="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/contact_no"
        android:autofillHints="@string/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:maxLength="10"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_contact"
        android:drawablePadding="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email"
        android:autofillHints="@string/email_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="12dp"
        android:maxLines="1"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_no"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_info"
        android:textSize="28sp"
        android:textStyle="bold"
        android:maxLength="12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <EditText
        android:id="@+id/Account_no"
        android:autofillHints="@string/account_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_account_no"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/account_number"
        android:inputType="number"
        android:padding="5dp"
        android:textSize="20sp"
        android:maxLength="12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <EditText
        android:id="@+id/IFS_code"
        android:autofillHints="@string/ifs_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:maxLength="11"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_ifsc"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/ifs_code"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Account_no"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/current_amt"
        android:autofillHints="@string/current_balance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_balance"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/current_balance"
        android:inputType="number"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IFS_code"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_amt" />


</androidx.constraintlayout.widget.ConstraintLayout>